<resources>
    <string name="app_name">WeatherToday</string>
    <string name="temperature">Temperature:</string>
    <string name="celsius">celsius</string>
    <string name="c">°C</string>
    <string name="deg">deg</string>
    <string name="percent">%</string>
    <string name="rain">Rain:</string>
    <string name="rainy">rainy</string>
    <string name="wind">Wind:</string>
    <string name="km_h">Km/h</string>
    <string name="wind_value">Wind Value</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="city_name">Dhaka</string>
    <string name="degree">°C</string>
    <string name="date">27-08-2016</string>
    <string name="humidity">Humidity:</string>
    <string name="pressure">Pressure:</string>
    <string name="pressure_value">Pressure Value</string>
    <string name="humidity_value">Humidity Value</string>
    <string name="precipitation">Precipitation:</string>
    <string name="precipitation_value">Precipitation</string>
    <string name="today">Saturday</string>
    <string name="about_us">We are Elite Developers, some passionate Android Application Developers. We love to take challenge and solve creative problems. This is our first app. Feel free to contact us and give your feedback. Thank you.</string>
    <string name="condition">Partly cloudy</string>
</resources>
