<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".fragment.FirstFragment">

    <!-- TODO: Update blank fragment layout -->

    <RelativeLayout
        android:id="@+id/layoutHeader"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <ImageView
            android:id="@+id/ivCondition"
            android:src="@drawable/splash"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_width="160dp"
            android:layout_height="160dp" />

        <TextView
            android:id="@+id/tvDay"
            android:layout_marginTop="10dp"
            android:text="@string/today"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_below="@id/tvDay"
            android:text="@string/date"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCityName"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/tvDate"
            android:text="@string/city_name"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvTemperature"
            android:layout_below="@+id/tvCityName"
            android:text="25"
            android:textSize="80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvDegree"
            android:layout_toRightOf="@+id/tvTemperature"
            android:layout_alignTop="@+id/tvTemperature"
            android:text="@string/degree"
            android:textSize="80sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvCondition"
            android:layout_below="@id/ivCondition"
            android:layout_alignEnd="@id/ivCondition"
            android:layout_alignRight="@id/ivMain"
            android:layout_marginTop="8dp"
            android:text="@string/condition"
            android:textSize="30sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/layoutFooter"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <TextView
            android:id="@+id/tvHumidity"
            android:text="@string/humidity"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvHumidityValue"
            android:layout_toRightOf="@id/tvHumidity"
            android:layout_alignBaseline="@+id/tvHumidity"
            android:layout_marginLeft="8dp"
            android:text="@string/humidity_value"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPressure"
            android:layout_below="@id/tvHumidity"
            android:layout_marginTop="8dp"
            android:text="@string/pressure"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPressureValue"
            android:layout_toRightOf="@id/tvPressure"
            android:layout_alignBaseline="@+id/tvPressure"
            android:layout_marginLeft="8dp"
            android:text="@string/pressure_value"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPrecipitation"
            android:layout_below="@id/tvPressure"
            android:layout_marginTop="8dp"
            android:text="@string/precipitation"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvPrecipitationValue"
            android:layout_toRightOf="@id/tvPrecipitation"
            android:layout_alignBaseline="@+id/tvPrecipitation"
            android:layout_marginLeft="8dp"
            android:text="@string/precipitation_value"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvWind"
            android:layout_below="@id/tvPrecipitation"
            android:layout_marginTop="8dp"
            android:text="@string/wind"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tvWindValue"
            android:layout_toRightOf="@id/tvWind"
            android:layout_alignBaseline="@+id/tvWind"
            android:layout_marginLeft="8dp"
            android:text="@string/wind_value"
            android:textSize="25sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </RelativeLayout>

</LinearLayout>
